--- a/opdracht/website/css/style.css
+++ b/opdracht/website/css/style.css
@@ -21,13 +21,13 @@ div h1{
 }
 
 #poster1{
-    background-color: blue;
+    background-color: rgb(255, 255, 255);
 }
 
 #poster2{
-    background-color: blue;
+    background-color: rgb(0, 183, 255);
 }
 
 #poster3{
-    background-color: blue;
+    background-color: rgb(162, 162, 243);
 }
